--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -15,13 +15,25 @@ p {
     line-height: 1.69rem;
 }
 
-p + p {
+p + p,
+.heading + p {
     @apply mt-6;
 }
 
+video {
+    
+}
+
 .heading {
+    @apply font-bold text-ch-black tracking-slight leading-none;
+}
+
+.heading-normal {
     font-size: 2rem;
-    @apply font-extrabold text-ch-black;
+}
+
+.heading-large {
+    font-size: 2.5rem;
 }
 
 .left-50 {
@@ -34,6 +46,10 @@ p + p {
 
 .height-fit {
     height: fit-content;
+}
+
+.tracking-slight {
+    letter-spacing: -0.0125em;
 }
 
 .extra-brands-list {
